# HW7

./: main.py  pyproject.toml
.github/workflows/: ci.yml
regression/: logreg.py
test/: test_logreg.py
